sls alpha, uis, cohort_synthea_100

--- a/apis/as-sls/serverless.yml
+++ b/apis/as-sls/serverless.yml
@@ -21,7 +21,7 @@ package:
     - .git/**
 
 functions:
-  test:
-    handler: http
+  cohort-bundles-test:
+    handler: cohort_bundles_test
     events:
       - http: path
